--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "adm-zip": "^0.5.10",
     "cloudinary": "^1.36.4",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
