--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@sentry/node": "^7.53.1",
     "adm-zip": "^0.5.10",
     "cloudinary": "^1.36.4",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "^4.18.2",
-    "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
